enabled caching on server

--- a/Web.config
+++ b/Web.config
@@ -3,4 +3,16 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0"/>
   </system.web>
+  <system.webServer>
+    <caching enabled="true" enableKernelCache="true">
+      <profiles>
+        <add extension=".css" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".gif" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".jpg" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".png" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".js" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+        <add extension=".html" policy="CacheUntilChange" kernelCachePolicy="CacheUntilChange" />
+      </profiles>
+    </caching>
+  </system.webServer>
 </configuration>
